// ====================================================================
// HISTORY
// VERSION : 1.1.2 : FA : #7453 : 07/08/2017 : Move adapters folder in client folder
// END-HISTORY
// ====================================================================

package dataControllerUtils.protobuf;

import "./Timestamp.proto";

message TimeInterval {
extensions 3 to 103;
    optional Timestamp startTime = 1;
    optional Timestamp endTime = 2;
}
